static/psi4manual/1.1.0/_sources/api/psi4.core.Molecule.rst.txt


psi4.core.Molecule
==================

.. currentmodule:: psi4.core

.. autoclass:: Molecule
   :show-inheritance:

   

   
   

   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~Molecule.units

   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~Molecule.BFS
      ~Molecule.Z
      ~Molecule.activate_all_fragments
      ~Molecule.add_atom
      ~Molecule.atom_at_position
      ~Molecule.center_of_mass
      ~Molecule.charge
      ~Molecule.clone
      ~Molecule.create_molecule_from_string
      ~Molecule.create_psi4_string_from_molecule
      ~Molecule.deactivate_all_fragments
      ~Molecule.distance_matrix
      ~Molecule.extract_subsets
      ~Molecule.fZ
      ~Molecule.fcharge
      ~Molecule.find_point_group
      ~Molecule.fix_com
      ~Molecule.fix_orientation
      ~Molecule.flabel
      ~Molecule.fmass
      ~Molecule.form_symmetry_information
      ~Molecule.fsymbol
      ~Molecule.fx
      ~Molecule.fy
      ~Molecule.fz
      ~Molecule.geometry
      ~Molecule.get_full_point_group
      ~Molecule.get_variable
      ~Molecule.irrep_labels
      ~Molecule.is_variable
      ~Molecule.label
      ~Molecule.mass
      ~Molecule.molecular_charge
      ~Molecule.move_to_com
      ~Molecule.multiplicity
      ~Molecule.nactive_fragments
      ~Molecule.nallatom
      ~Molecule.name
      ~Molecule.natom
      ~Molecule.nfragments
      ~Molecule.nuclear_dipole
      ~Molecule.nuclear_repulsion_energy
      ~Molecule.point_group
      ~Molecule.print_bond_angles
      ~Molecule.print_cluster
      ~Molecule.print_distances
      ~Molecule.print_in_input_format
      ~Molecule.print_out
      ~Molecule.print_out_in_angstrom
      ~Molecule.print_out_in_bohr
      ~Molecule.print_out_of_planes
      ~Molecule.reinterpret_coordentry
      ~Molecule.reset_point_group
      ~Molecule.rotational_constants
      ~Molecule.run_dftd3
      ~Molecule.run_gcp
      ~Molecule.save_string_xyz
      ~Molecule.save_string_xyz_file
      ~Molecule.save_xyz_file
      ~Molecule.schoenflies_symbol
      ~Molecule.set_active_fragment
      ~Molecule.set_active_fragments
      ~Molecule.set_basis_all_atoms
      ~Molecule.set_basis_by_label
      ~Molecule.set_basis_by_symbol
      ~Molecule.set_geometry
      ~Molecule.set_ghost_fragment
      ~Molecule.set_ghost_fragments
      ~Molecule.set_mass
      ~Molecule.set_molecular_charge
      ~Molecule.set_multiplicity
      ~Molecule.set_name
      ~Molecule.set_point_group
      ~Molecule.set_variable
      ~Molecule.symbol
      ~Molecule.symmetrize
      ~Molecule.translate
      ~Molecule.update_geometry
      ~Molecule.x
      ~Molecule.y
      ~Molecule.z

   
   

   
   

   .. rubric:: Attributes Documentation

   
   .. autoattribute:: units

   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: BFS
   .. automethod:: Z
   .. automethod:: activate_all_fragments
   .. automethod:: add_atom
   .. automethod:: atom_at_position
   .. automethod:: center_of_mass
   .. automethod:: charge
   .. automethod:: clone
   .. automethod:: create_molecule_from_string
   .. automethod:: create_psi4_string_from_molecule
   .. automethod:: deactivate_all_fragments
   .. automethod:: distance_matrix
   .. automethod:: extract_subsets
   .. automethod:: fZ
   .. automethod:: fcharge
   .. automethod:: find_point_group
   .. automethod:: fix_com
   .. automethod:: fix_orientation
   .. automethod:: flabel
   .. automethod:: fmass
   .. automethod:: form_symmetry_information
   .. automethod:: fsymbol
   .. automethod:: fx
   .. automethod:: fy
   .. automethod:: fz
   .. automethod:: geometry
   .. automethod:: get_full_point_group
   .. automethod:: get_variable
   .. automethod:: irrep_labels
   .. automethod:: is_variable
   .. automethod:: label
   .. automethod:: mass
   .. automethod:: molecular_charge
   .. automethod:: move_to_com
   .. automethod:: multiplicity
   .. automethod:: nactive_fragments
   .. automethod:: nallatom
   .. automethod:: name
   .. automethod:: natom
   .. automethod:: nfragments
   .. automethod:: nuclear_dipole
   .. automethod:: nuclear_repulsion_energy
   .. automethod:: point_group
   .. automethod:: print_bond_angles
   .. automethod:: print_cluster
   .. automethod:: print_distances
   .. automethod:: print_in_input_format
   .. automethod:: print_out
   .. automethod:: print_out_in_angstrom
   .. automethod:: print_out_in_bohr
   .. automethod:: print_out_of_planes
   .. automethod:: reinterpret_coordentry
   .. automethod:: reset_point_group
   .. automethod:: rotational_constants
   .. automethod:: run_dftd3
   .. automethod:: run_gcp
   .. automethod:: save_string_xyz
   .. automethod:: save_string_xyz_file
   .. automethod:: save_xyz_file
   .. automethod:: schoenflies_symbol
   .. automethod:: set_active_fragment
   .. automethod:: set_active_fragments
   .. automethod:: set_basis_all_atoms
   .. automethod:: set_basis_by_label
   .. automethod:: set_basis_by_symbol
   .. automethod:: set_geometry
   .. automethod:: set_ghost_fragment
   .. automethod:: set_ghost_fragments
   .. automethod:: set_mass
   .. automethod:: set_molecular_charge
   .. automethod:: set_multiplicity
   .. automethod:: set_name
   .. automethod:: set_point_group
   .. automethod:: set_variable
   .. automethod:: symbol
   .. automethod:: symmetrize
   .. automethod:: translate
   .. automethod:: update_geometry
   .. automethod:: x
   .. automethod:: y
   .. automethod:: z

   
   
